clusters/cl01tl/manifests/cilium/Gateway-cilium-ssh-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-ssh-gateway
  namespace: kube-system
  labels:
    app.kubernetes.io/name: cilium-ssh-gateway
    app.kubernetes.io/instance: cilium
    app.kubernetes.io/part-of: cilium
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 10.234.0.35
  listeners:
    - name: ssh
      port: 22
      protocol: TCP
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: gitea
